--- a/website/index.html
+++ b/website/index.html
@@ -28,30 +28,31 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 12px 16px;
+      padding: 8px 16px;
       background-color: white;
       z-index: 1200;
       border-bottom: 1px solid #ccc;
-      transition: background-color 0.3s ease;
     }
 
     .menu-icon {
       width: 22px;
       height: 16px;
-      margin-top: 0px;
+      margin-top: -2px;
       position: relative;
       cursor: pointer;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
     }
 
     .menu-icon div {
+      position: absolute;
       width: 100%;
       height: 2px;
       background-color: black;
       transition: all 0.4s ease;
     }
+
+    .menu-icon div:nth-child(1) { top: 0; }
+    .menu-icon div:nth-child(2) { top: 7px; }
+    .menu-icon div:nth-child(3) { top: 14px; }
 
     .menu-icon.open div:nth-child(1) {
       transform: rotate(45deg);
@@ -70,38 +71,30 @@
     .logo-container {
       position: absolute;
       left: 50%;
-      top: 50%;
+      top: 55%; /* Made it slightly lower */
       transform: translate(-50%, -50%);
-      width: 140px;
-      height: 75px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
       cursor: pointer;
-      overflow: hidden;
     }
 
     .logo {
-      position: absolute;
-      transition: opacity 0.3s ease;
-      max-height: 100%;
+      height: 36px;
+      transition: opacity 0.3s ease, height 0.3s ease;
     }
 
-    .logo#logoText {
-      opacity: 1;
+    .logo.alt {
+      display: none;
     }
 
-    .logo#logoImage {
-      opacity: 0;
+    .logo.alt.scrolled {
       height: 75px;
     }
 
     .cart-icon-container {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
+      margin-top: -2px;
       height: 22px;
       cursor: pointer;
-      margin-top: 0;
     }
 
     .cart-icon {
@@ -166,7 +159,6 @@
       padding: 80px 20px;
       transition: left 0.4s ease-in-out;
       z-index: 1100;
-      overflow-y: auto;
     }
 
     .sidebar.open {
@@ -215,10 +207,10 @@
 
   <div class="logo-container" id="logoContainer" title="Go to main page" role="button" tabindex="0">
     <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna Logo Text" class="logo" id="logoText" />
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" alt="Matt Scianna Icon Logo" class="logo" id="logoImage" />
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" alt="Matt Scianna Icon Logo" class="logo alt" id="logoImage" />
   </div>
 
-  <div class="cart-icon-container" title="View Cart" role="button" tabindex="0">
+  <div class="cart-icon-container" title="View Cart" role="button" tabindex="0" id="cartIcon">
     <img src="https://github.com/mattscianna/mattscianna/blob/main/SHOPPINGBAG.png?raw=true" alt="Cart" class="cart-icon" />
   </div>
 </header>
@@ -250,7 +242,7 @@
 </div>
 
 <nav id="sidebar" class="sidebar">
-  <p>Sidebar content goes here.</p>
+  <!-- Sidebar content here if needed -->
 </nav>
 
 <script>
@@ -279,7 +271,7 @@
     updateSlide(currentIndex);
   }
 
-  setInterval(nextSlide, 10000); // Auto slide every 10s
+  setInterval(nextSlide, 10000);
 
   menuToggle.addEventListener('click', () => {
     const open = menuToggle.classList.toggle('open');
@@ -287,6 +279,7 @@
   });
 
   logoContainer.addEventListener('click', () => {
+    window.scrollTo(0, 0);
     location.reload();
   });
 
@@ -298,13 +291,17 @@
   });
 
   window.addEventListener('scroll', () => {
-    const scrollY = window.scrollY;
-    if (scrollY > 50) {
-      logoText.style.opacity = '0';
-      logoImage.style.opacity = '1';
-    } else {
-      logoText.style.opacity = '1';
-      logoImage.style.opacity = '0';
+    if (!sidebar.classList.contains('open')) {
+      const scrollY = window.scrollY;
+      if (scrollY > 50) {
+        logoText.style.display = 'none';
+        logoImage.style.display = 'block';
+        logoImage.classList.add('scrolled');
+      } else {
+        logoText.style.display = 'block';
+        logoImage.style.display = 'none';
+        logoImage.classList.remove('scrolled');
+      }
     }
   });
 </script>
