--- a/website/index.html
+++ b/website/index.html
@@ -229,7 +229,8 @@
   <div class="arrow right" onclick="nextSlide()"></div>
 </div>
 
-<a href="#" style="text-decoration: none; color: inherit;">
+<!-- RED JERSEY LINKED -->
+<a href="/twofive/red" style="text-decoration: none; color: inherit;">
   <div class="product-image-box"></div>
 </a>
 <div class="product-info">
@@ -237,6 +238,7 @@
   <div class="product-price">$50.00</div>
 </div>
 
+<!-- WHITE JERSEY UNLINKED FOR NOW -->
 <a href="#" style="text-decoration: none; color: inherit;">
   <div class="product-image-box"></div>
 </a>
