--- a/twofive/red.html
+++ b/twofive/red.html
@@ -12,247 +12,121 @@
       box-sizing: border-box;
     }
 
-    body, html {
+    body {
       font-family: 'Oswald', sans-serif;
       background-color: white;
-      overflow-x: hidden;
+      text-align: center;
+      color: black;
     }
 
     header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 64px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 8px 16px;
-      background-color: white;
-      z-index: 1200;
-      border-bottom: 1px solid #ccc;
-    }
-
-    .menu-icon {
-      width: 22px;
-      height: 16px;
-      position: relative;
-      cursor: pointer;
-    }
-
-    .menu-icon div {
-      position: absolute;
-      width: 100%;
-      height: 2px;
-      background-color: black;
-      transition: all 0.4s ease;
-    }
-
-    .menu-icon div:nth-child(1) { top: 0; }
-    .menu-icon div:nth-child(2) { top: 7px; }
-    .menu-icon div:nth-child(3) { top: 14px; }
-
-    .menu-icon.open div:nth-child(1) {
-      transform: rotate(45deg);
-      top: 7px;
-    }
-
-    .menu-icon.open div:nth-child(2) {
-      opacity: 0;
-    }
-
-    .menu-icon.open div:nth-child(3) {
-      transform: rotate(-45deg);
-      top: 7px;
-    }
-
-    .logo-container {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      cursor: pointer;
-    }
-
-    .logo {
-      height: 36px;
-    }
-
-    .cart-icon-container {
-      display: flex;
-      align-items: flex-start;
-      height: 22px;
-      cursor: pointer;
-    }
-
-    .cart-icon {
-      height: 22px;
-    }
-
-    .sidebar {
-      position: fixed;
-      top: 0;
-      left: -100%;
-      width: 100vw;
-      height: 100vh;
-      background: white;
-      font-size: 24px;
-      padding: 80px 20px;
-      transition: left 0.4s ease-in-out;
-      z-index: 1100;
-    }
-
-    .sidebar.open {
-      left: 0;
-    }
-
-    .product-container {
-      margin-top: 100px;
-      padding: 40px 5%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    @media (min-width: 768px) {
-      .product-container {
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: flex-start;
-      }
-      header { display: flex; }
-    }
-
-    .product-details {
-      max-width: 300px;
-      margin-bottom: 30px;
-    }
-
-    .product-details h1 {
-      font-size: 24px;
-      margin-bottom: 16px;
-    }
-
-    .product-details ul {
-      list-style: none;
-      line-height: 1.8;
-      font-size: 16px;
+      padding: 16px 0;
+      font-size: 18px;
+      font-weight: bold;
     }
 
     .product-image {
-      max-width: 300px;
+      width: 100%;
     }
 
     .product-image img {
       width: 100%;
+      height: auto;
+      display: block;
     }
 
-    .product-actions {
+    .carousel-indicators {
       display: flex;
-      flex-direction: column;
-      gap: 16px;
+      justify-content: center;
+      align-items: center;
+      gap: 8px;
+      margin: 16px 0;
+    }
+
+    .carousel-indicators div {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background-color: #ccc;
+    }
+
+    .carousel-indicators .active {
+      background-color: black;
+    }
+
+    .color-label {
+      margin: 10px 0;
+      font-weight: bold;
+      font-size: 16px;
     }
 
     .sizes {
       display: flex;
-      gap: 10px;
+      justify-content: center;
+      gap: 16px;
+      margin: 16px 0;
+      font-size: 16px;
     }
 
     .sizes button {
-      padding: 6px 14px;
+      background: none;
+      border: none;
       font-size: 16px;
-      background: transparent;
-      border: 1px solid black;
       cursor: pointer;
-      transition: 0.3s ease;
     }
 
     .sizes button:hover {
-      background: black;
-      color: white;
+      text-decoration: underline;
     }
 
-    .add-to-cart {
-      padding: 10px 20px;
+    .sold-out-btn {
       background-color: black;
       color: white;
-      font-size: 16px;
       border: none;
-      cursor: pointer;
-      transition: 0.3s ease;
+      padding: 16px;
+      font-size: 16px;
+      width: 90%;
+      max-width: 400px;
+      margin: 20px auto;
+      display: block;
     }
 
-    .add-to-cart:hover {
-      background-color: #333;
+    footer {
+      padding: 20px 0;
+      font-size: 14px;
+      color: #555;
     }
   </style>
 </head>
 <body>
 
-<header>
-  <div id="menuToggle" class="menu-icon" aria-label="Toggle sidebar" role="button" tabindex="0">
-    <div></div><div></div><div></div>
-  </div>
-
-  <div class="logo-container" id="logoContainer" title="Go to main page" role="button" tabindex="0">
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna Logo Text" class="logo" />
-  </div>
-
-  <div class="cart-icon-container" title="View Cart" role="button" tabindex="0" id="cartIcon">
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/SHOPPINGBAG.png?raw=true" alt="Cart" class="cart-icon" />
-  </div>
-</header>
-
-<nav id="sidebar" class="sidebar">
-  <p>Sidebar content goes here.</p>
-</nav>
-
-<div class="product-container">
-  <div class="product-details">
-    <h1>SPLIT ZIP JACKET USED<br>BLACK</h1>
-    <ul>
-      <li>• CROPPED LOOSE FIT</li>
-      <li>• HANDMADE DISTRESSING</li>
-      <li>• LINED</li>
-      <li>• EVERY IS UNIQUE</li>
-      <li>• LIMITED STOCK</li>
-      <li>• HEAVY COTTON</li>
-      <li>• YKK ZIPPER</li>
-    </ul>
-  </div>
+  <header>
+    TWO-FIVE JERSEY (RED)
+  </header>
 
   <div class="product-image">
-    <img src="https://via.placeholder.com/300x400?text=Product+Image" alt="Product Image" />
+    <img src="https://via.placeholder.com/600x800?text=Product+Image" alt="TWO-FIVE JERSEY (RED)" />
   </div>
 
-  <div class="product-actions">
-    <div class="sizes">
-      <button>S</button>
-      <button>M</button>
-      <button>L</button>
-      <button>XL</button>
-      <button>XXL</button>
-    </div>
-    <button class="add-to-cart">ADD TO CART — $185</button>
+  <div class="carousel-indicators">
+    <div class="active"></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
   </div>
-</div>
 
-<script>
-  const menuToggle = document.getElementById('menuToggle');
-  const sidebar = document.getElementById('sidebar');
+  <div class="color-label">GREEN</div>
 
-  menuToggle.addEventListener('click', () => {
-    const open = menuToggle.classList.toggle('open');
-    sidebar.classList.toggle('open', open);
-  });
+  <div class="sizes">
+    <button>S</button>
+    <button>M</button>
+    <button>L</button>
+    <button>XL</button>
+    <button>XXL</button>
+  </div>
 
-  ['menuToggle', 'logoContainer'].forEach(id => {
-    const el = document.getElementById(id);
-    el.addEventListener('keydown', (e) => {
-      if (e.key === 'Enter') el.click();
-    });
-  });
-</script>
+  <button class="sold-out-btn">ADD TO CART</button>
 
 </body>
 </html>
