--- a/twofive/red.html
+++ b/twofive/red.html
@@ -17,15 +17,119 @@
       background-color: white;
       text-align: center;
       color: black;
+      user-select: none;
     }
 
+    /* Header & Sidebar Styles (from your main code) */
     header {
-      padding: 16px 0;
-      font-size: 18px;
-      font-weight: bold;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 64px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 8px 16px;
+      background-color: white;
+      z-index: 1200;
+      border-bottom: 1px solid #ccc;
+      transition: background-color 0.3s ease;
     }
 
+    .menu-icon {
+      width: 22px;
+      height: 16px;
+      margin-top: -2px;
+      position: relative;
+      cursor: pointer;
+    }
+
+    .menu-icon div {
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background-color: black;
+      transition: all 0.4s ease;
+    }
+
+    .menu-icon div:nth-child(1) { top: 0; }
+    .menu-icon div:nth-child(2) { top: 7px; }
+    .menu-icon div:nth-child(3) { top: 14px; }
+
+    .menu-icon.open div:nth-child(1) {
+      transform: rotate(45deg);
+      top: 7px;
+    }
+
+    .menu-icon.open div:nth-child(2) {
+      opacity: 0;
+    }
+
+    .menu-icon.open div:nth-child(3) {
+      transform: rotate(-45deg);
+      top: 7px;
+    }
+
+    .logo-container {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      align-items: center;
+      height: 100%;
+      cursor: pointer;
+    }
+
+    .logo {
+      height: 36px;
+      transition: opacity 0.3s ease, height 0.3s ease;
+      display: block;
+    }
+
+    .logo.alt {
+      display: none;
+    }
+
+    .logo.alt.scrolled {
+      height: 75px;
+    }
+
+    .cart-icon-container {
+      display: flex;
+      align-items: flex-start;
+      margin-top: -2px;
+      height: 22px;
+      cursor: pointer;
+    }
+
+    .cart-icon {
+      height: 22px;
+    }
+
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: -100%;
+      width: 100vw;
+      height: 100vh;
+      background: white;
+      font-family: 'Oswald', sans-serif;
+      font-weight: 400;
+      font-size: 24px;
+      padding: 80px 20px;
+      transition: left 0.4s ease-in-out;
+      z-index: 1100;
+      text-align: left;
+    }
+
+    .sidebar.open {
+      left: 0;
+    }
+
+    /* Product Image */
     .product-image {
+      margin-top: 80px; /* space below fixed header */
       width: 100%;
     }
 
@@ -35,6 +139,7 @@
       display: block;
     }
 
+    /* Carousel Indicators */
     .carousel-indicators {
       display: flex;
       justify-content: center;
@@ -54,12 +159,15 @@
       background-color: black;
     }
 
+    /* Color Label */
     .color-label {
       margin: 10px 0;
       font-weight: bold;
       font-size: 16px;
+      color: black;
     }
 
+    /* Sizes - black buttons with white text */
     .sizes {
       display: flex;
       justify-content: center;
@@ -69,16 +177,21 @@
     }
 
     .sizes button {
-      background: none;
+      background-color: black;
+      color: white;
       border: none;
       font-size: 16px;
+      padding: 8px 14px;
       cursor: pointer;
+      border-radius: 4px;
+      transition: background-color 0.3s ease;
     }
 
     .sizes button:hover {
-      text-decoration: underline;
+      background-color: #333;
     }
 
+    /* Sold Out Button */
     .sold-out-btn {
       background-color: black;
       color: white;
@@ -89,6 +202,8 @@
       max-width: 400px;
       margin: 20px auto;
       display: block;
+      border-radius: 6px;
+      cursor: pointer;
     }
 
     footer {
@@ -96,37 +211,96 @@
       font-size: 14px;
       color: #555;
     }
+
+    @media (min-width: 768px) {
+      header { display: none; }
+    }
   </style>
 </head>
 <body>
 
-  <header>
-    TWO-FIVE JERSEY (RED)
-  </header>
-
-  <div class="product-image">
-    <img src="https://via.placeholder.com/600x800?text=Product+Image" alt="TWO-FIVE JERSEY (RED)" />
+<header>
+  <div id="menuToggle" class="menu-icon" aria-label="Toggle sidebar" role="button" tabindex="0">
+    <div></div><div></div><div></div>
   </div>
 
-  <div class="carousel-indicators">
-    <div class="active"></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+  <div class="logo-container" id="logoContainer" title="Go to main page" role="button" tabindex="0">
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna Logo Text" class="logo" id="logoText" />
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" alt="Matt Scianna Icon Logo" class="logo alt" id="logoImage" />
   </div>
 
-  <div class="color-label">GREEN</div>
-
-  <div class="sizes">
-    <button>S</button>
-    <button>M</button>
-    <button>L</button>
-    <button>XL</button>
-    <button>XXL</button>
+  <div class="cart-icon-container" title="View Cart" role="button" tabindex="0" id="cartIcon">
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/SHOPPINGBAG.png?raw=true" alt="Cart" class="cart-icon" />
   </div>
+</header>
 
-  <button class="sold-out-btn">ADD TO CART</button>
+<div class="product-image">
+  <img src="https://via.placeholder.com/600x800?text=Product+Image" alt="TWO-FIVE JERSEY (RED)" />
+</div>
+
+<div class="carousel-indicators">
+  <div class="active"></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
+
+<div class="color-label">RED</div>
+
+<div class="sizes">
+  <button>S</button>
+  <button>M</button>
+  <button>L</button>
+  <button>XL</button>
+  <button>XXL</button>
+</div>
+
+<button class="sold-out-btn">ADD TO CART</button>
+
+<nav id="sidebar" class="sidebar">
+  <p>Sidebar content goes here.</p>
+</nav>
+
+<script>
+  const menuToggle = document.getElementById('menuToggle');
+  const sidebar = document.getElementById('sidebar');
+  const logoContainer = document.getElementById('logoContainer');
+  const logoText = document.getElementById('logoText');
+  const logoImage = document.getElementById('logoImage');
+
+  menuToggle.addEventListener('click', () => {
+    const open = menuToggle.classList.toggle('open');
+    sidebar.classList.toggle('open', open);
+  });
+
+  logoContainer.addEventListener('click', () => {
+    window.scrollTo(0, 0);
+    location.reload();
+  });
+
+  ['menuToggle', 'logoContainer'].forEach(id => {
+    const el = document.getElementById(id);
+    el.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter') el.click();
+    });
+  });
+
+  window.addEventListener('scroll', () => {
+    if (!sidebar.classList.contains('open')) {
+      const scrollY = window.scrollY;
+      if (scrollY > 50) {
+        logoText.style.display = 'none';
+        logoImage.style.display = 'block';
+        logoImage.classList.add('scrolled');
+      } else {
+        logoText.style.display = 'block';
+        logoImage.style.display = 'none';
+        logoImage.classList.remove('scrolled');
+      }
+    }
+  });
+</script>
 
 </body>
 </html>
