--- a/twofive/red.html
+++ b/twofive/red.html
@@ -18,6 +18,13 @@
       text-align: center;
       color: black;
       user-select: none;
+      overflow-x: hidden;
+      transition: overflow 0.3s ease;
+    }
+
+    /* Disable scrolling on body when sidebar open */
+    body.sidebar-open {
+      overflow: hidden;
     }
 
     /* Header & Sidebar Styles */
@@ -121,6 +128,7 @@
       transition: left 0.4s ease-in-out;
       z-index: 1100;
       text-align: left;
+      overflow-y: auto; /* sidebar scroll enabled */
     }
 
     .sidebar.open {
@@ -136,7 +144,7 @@
     h1.product-title {
       margin-top: 80px; /* space under fixed header */
       font-weight: 700;
-      font-size: 24px; /* smaller size */
+      font-size: 20px; /* made smaller */
       margin-bottom: 20px;
       user-select: none;
       border-bottom: none; /* removed underline */
@@ -146,17 +154,19 @@
     .product-image {
       position: relative;
       width: 100%;
-      max-width: 600px;
+      max-width: 480px; /* match main page gray box size */
       margin: 0 auto 20px auto;
       background-color: black; /* black background */
-      padding: 10px;
       border-radius: 8px;
+      /* removed padding and border to remove white border */
+      overflow: hidden;
     }
 
     .product-image img {
       width: 100%;
       height: auto;
       display: block;
+      user-select: none;
     }
 
     /* Arrows styling - white color */
@@ -170,6 +180,7 @@
       opacity: 0.7;
       transition: opacity 0.2s ease;
       fill: white; /* white arrows */
+      user-select: none;
     }
 
     .arrow:hover {
@@ -248,11 +259,29 @@
       font-size: 16px;
       width: 90%;
       max-width: 400px;
-      margin: 20px auto;
+      margin: 20px auto 40px auto; /* added bottom margin for spacing */
       display: block;
       border-radius: 6px;
       cursor: pointer;
       user-select: none;
+    }
+
+    /* Story text box under Add to Cart button */
+    .story-textbox {
+      max-width: 480px;
+      margin: 0 auto 40px auto;
+      padding: 16px;
+      font-size: 14px;
+      line-height: 1.5;
+      color: #222;
+      text-align: left;
+      font-weight: 400;
+      user-select: text;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      background-color: #f9f9f9;
+      min-height: 100px;
+      white-space: pre-wrap;
     }
 
     footer {
@@ -275,55 +304,81 @@
 
   <div class="logo-container" id="logoContainer" title="Go to main page" role="button" tabindex="0">
     <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna Logo Text" class="logo" id="logoText" />
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" alt="Matt Scianna Icon Logo" class="logo alt" id="logoImage" />
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/MS%20LOGO%20BLACK.png?raw=true" alt="Matt Scianna Logo Icon" class="logo alt" id="logoIcon" />
   </div>
 
-  <div class="cart-icon-container" title="View Cart" role="button" tabindex="0" id="cartIcon">
-    <img src="https://github.com/mattscianna/mattscianna/blob/main/SHOPPINGBAG.png?raw=true" alt="Cart" class="cart-icon" />
+  <div class="cart-icon-container" title="Cart">
+    <img src="https://cdn-icons-png.flaticon.com/512/3144/3144456.png" alt="Cart Icon" class="cart-icon" />
   </div>
 </header>
 
-<h1 class="product-title">TWO-FIVE JERSEY (RED)</h1>
-
-<div class="product-image">
-  <img src="https://via.placeholder.com/600x800?text=Product+Image" alt="TWO-FIVE JERSEY (RED)" />
-  <svg class="arrow arrow-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-label="Previous image" role="button" tabindex="0">
-    <path d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z" fill="white"/>
-  </svg>
-  <svg class="arrow arrow-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-label="Next image" role="button" tabindex="0">
-    <path d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z" fill="white"/>
-  </svg>
+<div class="sidebar" role="navigation" aria-label="Main Sidebar">
+  <!-- Sidebar content here -->
+  <p>Link 1</p>
+  <p>Link 2</p>
+  <p>Link 3</p>
+  <p>Link 4</p>
+  <p>Link 5</p>
+  <p>Link 6</p>
+  <p>Link 7</p>
+  <p>Link 8</p>
 </div>
 
-<div class="carousel-indicators">
-  <div class="active"></div>
-  <div></div>
-  <div></div>
-</div>
+<main>
+  <h1 class="product-title">TWO-FIVE JERSEY (RED)</h1>
 
-<div class="color-label">RED</div>
+  <div class="product-image" aria-label="Product images carousel">
+    <img src="https://via.placeholder.com/480x640/000000/FFFFFF?text=Product+Image+1" alt="TWO-FIVE JERSEY (RED) - Image 1" />
+    <svg class="arrow arrow-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-label="Previous image" role="button" tabindex="0">
+      <path d="M15.41 7.41 10.83 12l4.58 4.59L14 18l-6-6 6-6z" fill="white"/>
+    </svg>
+    <svg class="arrow arrow-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-label="Next image" role="button" tabindex="0">
+      <path d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z" fill="white"/>
+    </svg>
+  </div>
 
-<div class="sizes">
-  <button>S</button>
-  <button>M</button>
-  <button>L</button>
-  <button>XL</button>
-</div>
+  <div class="carousel-indicators" role="tablist" aria-label="Image carousel navigation">
+    <div class="active" role="tab" aria-selected="true" tabindex="0"></div>
+    <div role="tab" tabindex="0"></div>
+    <div role="tab" tabindex="0"></div>
+  </div>
 
-<button class="sold-out-btn" disabled>SOLD OUT</button>
+  <div class="color-label">RED</div>
+
+  <div class="sizes" role="list" aria-label="Available sizes">
+    <button role="listitem">S</button>
+    <button role="listitem">M</button>
+    <button role="listitem">L</button>
+    <button role="listitem">XL</button>
+    <button role="listitem">XXL</button>
+  </div>
+
+  <button class="sold-out-btn" disabled aria-disabled="true">SOLD OUT</button>
+
+  <div class="story-textbox" contenteditable="true" aria-label="Add story about the jersey here" spellcheck="true" placeholder="Write the story of the jerseys here..."></div>
+</main>
 
 <footer>
   &copy; 2025 Matt Scianna
 </footer>
 
 <script>
-  // Sidebar toggle
+  // Sidebar toggle and scroll lock
   const menuToggle = document.getElementById('menuToggle');
   const sidebar = document.querySelector('.sidebar');
+  const body = document.body;
 
   menuToggle.addEventListener('click', () => {
     menuToggle.classList.toggle('open');
     sidebar.classList.toggle('open');
+    body.classList.toggle('sidebar-open');
+  });
+
+  menuToggle.addEventListener('keypress', (e) => {
+    if (e.key === 'Enter' || e.key === ' ') {
+      e.preventDefault();
+      menuToggle.click();
+    }
   });
 
   // Logo click redirect to main front page
