--- a/twofive/red.html
+++ b/twofive/red.html
@@ -22,43 +22,144 @@
       transition: overflow 0.3s ease;
     }
 
+    /* Disable scrolling on body when sidebar open */
     body.sidebar-open {
       overflow: hidden;
     }
 
+    /* Header & Sidebar Styles */
     header {
-      /* same as before */
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 64px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 8px 16px;
+      background-color: white;
+      z-index: 1200;
+      border-bottom: 1px solid #ccc;
+      transition: background-color 0.3s ease;
+    }
+
+    .menu-icon {
+      width: 22px;
+      height: 16px;
+      margin-top: -2px;
+      position: relative;
+      cursor: pointer;
+    }
+
+    .menu-icon div {
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background-color: black;
+      transition: all 0.4s ease;
+    }
+
+    .menu-icon div:nth-child(1) { top: 0; }
+    .menu-icon div:nth-child(2) { top: 7px; }
+    .menu-icon div:nth-child(3) { top: 14px; }
+
+    .menu-icon.open div:nth-child(1) {
+      transform: rotate(45deg);
+      top: 7px;
+    }
+
+    .menu-icon.open div:nth-child(2) {
+      opacity: 0;
+    }
+
+    .menu-icon.open div:nth-child(3) {
+      transform: rotate(-45deg);
+      top: 7px;
+    }
+
+    .logo-container {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      align-items: center;
+      height: 100%;
+      cursor: pointer;
+    }
+
+    .logo {
+      height: 36px;
+      transition: opacity 0.3s ease, height 0.3s ease;
+      display: block;
+    }
+
+    .logo.alt {
+      display: none;
+    }
+
+    .logo.alt.scrolled {
+      height: 75px;
+    }
+
+    .cart-icon-container {
+      display: flex;
+      align-items: flex-start;
+      margin-top: -2px;
+      height: 22px;
+      cursor: pointer;
+    }
+
+    .cart-icon {
+      height: 22px;
     }
 
     .sidebar {
+      position: fixed;
+      top: 0;
+      left: -100%;
+      width: 100vw;
+      height: 100vh;
+      background: white;
       font-family: 'Oswald', sans-serif;
-      overflow-y: auto;
-      /* same as before */
+      font-weight: 400;
+      font-size: 24px;
+      padding: 80px 20px;
+      transition: left 0.4s ease-in-out;
+      z-index: 1100;
+      text-align: left;
+      overflow-y: auto; /* sidebar scroll enabled */
     }
 
-    main, .carousel-indicators, .color-label, .sizes, .sold-out-btn, h1, .story-textbox {
+    .sidebar.open {
+      left: 0;
+    }
+
+    /* Main Content Font */
+    main, .product-image, .carousel-indicators, .color-label, .sizes, .sold-out-btn, h1 {
       font-family: 'Oswald', sans-serif;
     }
 
-    /* Product title smaller */
+    /* Product title - smaller and no underline */
     h1.product-title {
-      margin-top: 80px;
+      margin-top: 80px; /* space under fixed header */
       font-weight: 700;
-      font-size: 20px;
+      font-size: 20px; /* made smaller */
       margin-bottom: 20px;
       user-select: none;
-      border-bottom: none;
+      border-bottom: none; /* removed underline */
     }
 
-    /* Product Image Container - NO rounding */
+    /* Product Image Container with arrows and black background */
     .product-image {
       position: relative;
       width: 100%;
-      max-width: 480px;
+      max-width: 480px; /* match main page gray box size */
       margin: 0 auto 20px auto;
-      background-color: black;
+      background-color: black; /* black background */
+      border-radius: 8px;
+      /* removed padding and border to remove white border */
       overflow: hidden;
-      border-radius: 0; /* removed rounding */
     }
 
     .product-image img {
@@ -68,12 +169,71 @@
       user-select: none;
     }
 
-    /* Arrows white */
+    /* Arrows styling - white color */
     .arrow {
-      /* same as before */
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 36px;
+      height: 36px;
+      cursor: pointer;
+      opacity: 0.7;
+      transition: opacity 0.2s ease;
+      fill: white; /* white arrows */
+      user-select: none;
     }
 
-    /* Sizes - bold black buttons no border */
+    .arrow:hover {
+      opacity: 1;
+    }
+
+    .arrow-left {
+      left: 8px;
+    }
+
+    .arrow-right {
+      right: 8px;
+    }
+
+    /* Carousel Indicators */
+    .carousel-indicators {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 8px;
+      margin: 16px 0;
+    }
+
+    .carousel-indicators div {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background-color: #ccc;
+    }
+
+    .carousel-indicators .active {
+      background-color: black;
+    }
+
+    /* Color Label */
+    .color-label {
+      margin: 10px 0;
+      font-weight: 700;
+      font-size: 16px;
+      color: black;
+      user-select: none;
+    }
+
+    /* Sizes - black bold text, transparent background, no border */
+    .sizes {
+      display: flex;
+      justify-content: center;
+      gap: 16px;
+      margin: 16px 0;
+      font-size: 16px;
+      user-select: none;
+    }
+
     .sizes button {
       background: transparent;
       color: black;
@@ -90,7 +250,7 @@
       text-decoration: underline;
     }
 
-    /* ADD TO CART button */
+    /* Sold Out Button */
     .sold-out-btn {
       background-color: black;
       color: white;
@@ -99,34 +259,35 @@
       font-size: 16px;
       width: 90%;
       max-width: 400px;
-      margin: 20px auto 40px auto;
+      margin: 20px auto 40px auto; /* added bottom margin for spacing */
       display: block;
       border-radius: 6px;
       cursor: pointer;
       user-select: none;
     }
 
-    /* Story text box (not editable, no border, no background, no rounding) */
+    /* Story text box under Add to Cart button */
     .story-textbox {
       max-width: 480px;
-      margin: 30px auto 60px auto; /* more margin below the button */
-      padding: 0;
+      margin: 0 auto 40px auto;
+      padding: 16px;
       font-size: 14px;
       line-height: 1.5;
-      color: black;
+      color: #222;
+      text-align: left;
       font-weight: 400;
       user-select: text;
-      text-align: left;
-      border: none;
-      background: none;
-      border-radius: 0;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      background-color: #f9f9f9;
+      min-height: 100px;
       white-space: pre-wrap;
-      min-height: 80px;
-      font-family: 'Oswald', sans-serif;
     }
 
     footer {
-      /* same */
+      padding: 20px 0;
+      font-size: 14px;
+      color: #555;
     }
 
     @media (min-width: 768px) {
@@ -146,13 +307,21 @@
     <img src="https://github.com/mattscianna/mattscianna/blob/main/MS%20LOGO%20BLACK.png?raw=true" alt="Matt Scianna Logo Icon" class="logo alt" id="logoIcon" />
   </div>
 
-  <div class="cart-icon-container" title="Bag">
-    <img src="https://cdn-icons-png.flaticon.com/512/2913/2913465.png" alt="Shopping Bag Icon" class="cart-icon" />
+  <div class="cart-icon-container" title="Cart">
+    <img src="https://cdn-icons-png.flaticon.com/512/3144/3144456.png" alt="Cart Icon" class="cart-icon" />
   </div>
 </header>
 
 <div class="sidebar" role="navigation" aria-label="Main Sidebar">
   <!-- Sidebar content here -->
+  <p>Link 1</p>
+  <p>Link 2</p>
+  <p>Link 3</p>
+  <p>Link 4</p>
+  <p>Link 5</p>
+  <p>Link 6</p>
+  <p>Link 7</p>
+  <p>Link 8</p>
 </div>
 
 <main>
@@ -184,12 +353,9 @@
     <button role="listitem">XXL</button>
   </div>
 
-  <button class="sold-out-btn">ADD TO CART</button>
+  <button class="sold-out-btn" disabled aria-disabled="true">SOLD OUT</button>
 
-  <div class="story-textbox" aria-label="Story about the jersey">
-    <!-- Add your jersey story text here -->
-    This is where you can add the story of the jerseys. Plain black text, no border, no background, no rounding.
-  </div>
+  <div class="story-textbox" contenteditable="true" aria-label="Add story about the jersey here" spellcheck="true" placeholder="Write the story of the jerseys here..."></div>
 </main>
 
 <footer>
@@ -197,6 +363,7 @@
 </footer>
 
 <script>
+  // Sidebar toggle and scroll lock
   const menuToggle = document.getElementById('menuToggle');
   const sidebar = document.querySelector('.sidebar');
   const body = document.body;
@@ -214,6 +381,7 @@
     }
   });
 
+  // Logo click redirect to main front page
   const logoContainer = document.getElementById('logoContainer');
   logoContainer.addEventListener('click', () => {
     window.location.href = 'https://mattscianna.com/website/';
@@ -224,8 +392,6 @@
       window.location.href = 'https://mattscianna.com/website/';
     }
   });
-
-  // Keep shopping bag icon static (no change code needed here)
 </script>
 
 </body>
