--- a/twofive/red.html
+++ b/twofive/red.html
@@ -334,7 +334,7 @@
     type="url"
     class="image-url-input"
     id="imageUrlInput"
-    placeholder="Paste image URL here to preview it"
+    placeholder="https://github.com/mattscianna/mattscianna/blob/main/JERSEYPNG.png?raw=true"
   />
 
   <div class="carousel-indicators" role="tablist" aria-label="Image carousel navigation">
